appId: com.zaimimran.almari
---
- launchApp:
    clearState: true
- repeat:
    times: 5
    commands:
      - scrollUntilVisible:
          element: "Skip"
          direction: DOWN
      - tapOn: "Skip"
- scrollUntilVisible:
    element: "Start with the sample closet"
    direction: DOWN
- tapOn: "Start with the sample closet"
- scrollUntilVisible:
    element: "Try a sample style"
    direction: DOWN
- tapOn: "Try a sample style"
- scrollUntilVisible:
    element: "A little inspiration for today."
    direction: UP
